@@ -18,7 +18,6 @@
 // File: main.php
 
 include './global_includes.php';
-include './includes/player_insignia_name.php';
 include './includes/calc_score.php';
 include './includes/calc_avg_tech.php';
 
@@ -139,7 +138,7 @@ $planettypes[2]= "mediumplanet.png";
 $planettypes[3]= "largeplanet.png";
 $planettypes[4]= "hugeplanet.png";
 
-$signame = player_insignia_name ($db, $_SESSION['username'], $langvars);
+$signame = BntPlayer::getInsignia ($db, $_SESSION['username'], $langvars);
 echo "<div style='width:90%; margin:auto; background-color:#400040; color:#C0C0C0; text-align:center; border:#fff 1px solid; padding:4px;'>\n";
 echo "{$signame} <span style='color:#fff; font-weight:bold;'>{$playerinfo['character_name']}</span>{$langvars['l_aboard']} <span style='color:#fff; font-weight:bold;'><a class='new_link' style='font-size:14px;' href='report.php'>{$playerinfo['ship_name']}</a></span>\n";
 echo "</div>\n";
